[metadata]
name = pyDarwin-Certara
version = 0.0.1
author = Mark Sale
author_email = mark.sale@certara.com
description = Python solution for using several machine learning methods to search a candidate solution space for the optimal population models in NONMEM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certara/FDA-OGD-ML
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    darwin = src/darwin
packages = darwin, darwin.algorithms, darwin.grid, darwin.nonmem
python_requires = >=3.10
install_requires =
    deap-Certara
    numpy
    psutil
    pyswarms
    scikit-optimize
    scipy
    xmltodict
