[metadata]
name = pyDarwin-Certara
version = 1.0.0
author = Mark Sale
author_email = mark.sale@certara.com
description = Python solution for using several machine learning methods to search a candidate solution space for the optimal population models in NONMEM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certara/pyDarwin
project_urls =
    Bug Tracker = https://github.com/certara/pyDarwin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    darwin = src/darwin
packages = darwin, darwin.algorithms, darwin.grid, darwin.nonmem
python_requires = >=3.10
install_requires =
    deap-Certara
    numpy<1.24
    psutil
    pyswarms
    scikit-optimize
    scipy
    xmltodict
